...
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Post Detail" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
...
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textViewLikeCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero_value"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/imageViewLikeInactiveButton"
            app:layout_constraintStart_toStartOf="@+id/imageViewLikeInactiveButton"
            app:layout_constraintTop_toBottomOf="@+id/imageViewLikeInactiveButton" />

        <ImageView
            android:id="@+id/imageViewLikeInactiveButton"
            android:layout_width="wrap_content"
...
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_inactive_like" />

        <ImageView
            android:id="@+id/imageViewLikeActiveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_active_like" />

        <Button
            android:id="@+id/buttonGiveFeedback"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/background_rounded_button"
            android:text="@string/give_feedback"
...
            app:layout_constraintBottom_toBottomOf="@+id/textViewLikeCount"
            app:layout_constraintEnd_toStartOf="@+id/textViewLikeCount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageViewLikeInactiveButton" />

        <Button
            android:id="@+id/buttonEditPost"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/background_rounded_button"
            android:text="@string/edit_post"
...
